fix safari backface visibility

--- a/src/shared/ui/molecules/m-profit-calculator-new/m-profit-calculator-new.scss
+++ b/src/shared/ui/molecules/m-profit-calculator-new/m-profit-calculator-new.scss
@@ -151,20 +151,20 @@
 
         &-front {
           // -webkit-transform:rotateY(0deg);
-          transform: rotateY(0deg) ;
-          -webkit-transform: rotateY(0deg) ;
-          -moz-transform: rotateY(0deg);
+          // transform: rotateY(0deg) ;
+          // -webkit-transform: rotateY(0deg) ;
+          // -moz-transform: rotateY(0deg);
         }
 
         &-front, &-back {
           position: absolute;
           width: 100%;
           height: 100%;
-          -moz-backface-visibility: hidden;
-          -o-backface-visibility: hidden;
-          -ms-backface-visibility: hidden;
-          -webkit-backface-visibility: hidden !important;  /* Safari */
-          backface-visibility: hidden;
+          // -moz-backface-visibility: hidden;
+          // -o-backface-visibility: hidden;
+          // -ms-backface-visibility: hidden;
+          // -webkit-backface-visibility: hidden !important;  /* Safari */
+          // backface-visibility: hidden;
 
           color: white;
           -webkit-perspective: 0;
@@ -178,9 +178,9 @@
           transform: rotateY(180deg);
           background: linear-gradient(90deg, rgba(0, 0, 0, 0.07) 0%, rgba(0, 0, 0, 0.00) 100%), var(--btcoin-500, #FF8D07);
 
-          transform: rotateY(180deg) translateZ(1px);
-          -webkit-transform: rotateY(180deg) translateZ(1px);
-          -moz-transform: rotateY(180deg) translateZ(1px); 
+          // transform: rotateY(180deg) translateZ(1px);
+          // -webkit-transform: rotateY(180deg) translateZ(1px);
+          // -moz-transform: rotateY(180deg) translateZ(1px); 
         }
 
         &-icon {
